# gdstk_rust

.github/workflows/: rust.yml
rust/: Cargo.toml  README.md  build.rs  run_tests.ps1  run_tests.sh
rust/benches/: gds_bench.rs
rust/examples/: bench_python.py  count_cells.rs  count_many.rs  count_many_fair.rs  count_many_parallel.rs  count_many_py_mp.py  count_many_py_threads.py  diff_gds.rs  gds_info_bench.rs  lib_info.py  lib_info.rs  list_labels.py  list_labels.rs  list_paths.py  list_paths.rs  list_polygons.py  list_polygons.rs  list_references.py  list_references.rs  make_modified.py  make_path_modified.py  measure_mem.py  roundtrip.rs
rust/src/: lib.rs  shims.cpp  shims.h
rust/tests/: integration.rs
rust/tests/common/: mod.rs
rust/tests/snapshots/: list_polygons_proof_lib.txt
